--- a/academic-portfolio/app/globals.css
+++ b/academic-portfolio/app/globals.css
@@ -53,7 +53,7 @@ hr {
 /* Layout: Left Aligned as requested, but with some padding so it's not touching the edge */
 .container-left {
   max-width: 900px;
-  margin-left: 0;
+  margin: 0 auto;
   padding: 3rem 2rem;
 }
 
